[package]
name = "analyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.36"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0.15"
anyhow = "1.0.55"
log = "0.4.14"
env_logger = "0.9.0"